certified-kubernetes-administrator-course/docs/03-Scheduling/validating-admission-policy-playground/parameters/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    environment: demo
  name: demo
